rust_compiler/libs/integration_tests/src/snapshots/integration_tests__number_literal_tests__binary_literals.snap
---
source: libs/integration_tests/src/number_literal_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 172
move r1 493
move r1 3735928559
move r1 51966

## Optimized Output

move r1 51966
