rust_compiler/libs/integration_tests/src/snapshots/integration_tests__number_literal_tests__number_literal_optimization.snap
---
source: libs/integration_tests/src/number_literal_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 42000
move r1 -255
move r1 -240
move r1 373.15

## Optimized Output

move r1 373.15
